# fixdecode

./: Common.mk  Common.mk.in  Makefile.am  bootstrap.sh  configure.ac
dicts/: Makefile.am
m4/: con_find_deps.m4
perl/: Makefile.am  fixdecode.pl.in
src/: Makefile.am  fixcore.cpp  fixcore.h  fixspec.cpp  fixtr.cpp
test/: test.fix
